新MAC文字压缩效果

--- a/苹果官网特效/新iMac文字压缩效果/index.html
+++ b/苹果官网特效/新iMac文字压缩效果/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>文字压缩效果</title>
-    <link href="./index.css"  rel="stylesheet" type="text/css"/>
+    <link href="./index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
-<div>
+<div class="imac">
     <h2>Only 11.5mm. Now that's thin.</h2>
     <div class="image">
-        <img src="./img/flow_startframe.jpg"/>
-
-
-
+        <img src="./img/flow_startframe.jpg" alt=""/>
     </div>
 </div>
 
