--- a/jsDemo/demo.html
+++ b/jsDemo/demo.html
@@ -3,12 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
 <div class="onClickEvn" id="idName" onclick="clickBtn()" title="这是一个title">
 	点击
 </div>
+
+<figure>
+	<picture>
+	<source media="(max-width: 750px)" srcset="https://www.chevrolet.com.cn/img/chevroletblazer-rs/promo-m.png">
+	<img srcset="https://www.chevrolet.com.cn/img/chevroletblazer-rs/feature/accessories/1.jpg" alt="cat">
+		</picture>
+	<figcaption style="color: blue">示例图片</figcaption>
+	<figcaption>JavaScript 代码示例</figcaption>
+	<p><code>const foo = 'hello';</code></p>
+</figure>
+
+<iframe src="https://isale.saic-gm.com/chevrolet-ichat-web/index.html"
+		width="480px" height="750px"
+        frameborder="0"
+        loading="lazy"
+        style="display: flex"
+        
+></iframe>
+
+<hr/>
+<input type="file" onchange="previewFile()" >
+<img id="image"  src="" height="200">
 
 
 </body>
@@ -25,6 +48,22 @@
 		console.log('clickEnv.title',clickEnv.title)
 		console.log('clickIdName.title',clickIdName.title)
 		
+	}
+	
+	function previewFile() {
+		// var preview = document.querySelector('img');
+		var preview = document.getElementById('image')
+		var file    = document.querySelector('input[type=file]').files[0];
+		var reader  = new FileReader();
+		
+		reader.addEventListener('load', function () {
+			preview.src = reader.result;
+		}, false);
+		console.log(reader.readyState)
+		
+		if (file) {
+			preview.src = reader.readAsDataURL(file);
+		}
 	}
 </script>
 
