--- a/jsDemo/demo.html
+++ b/jsDemo/demo.html
@@ -21,6 +21,10 @@
 	<p><code>const foo = 'hello';</code></p>
 </figure>
 
+<div>
+	<button onclick="onFetch()">点击fetch()</button>
+</div>
+
 <iframe src="https://isale.saic-gm.com/chevrolet-ichat-web/index.html"
 		width="480px" height="750px"
         frameborder="0"
@@ -65,6 +69,16 @@
 			preview.src = reader.readAsDataURL(file);
 		}
 	}
+	
+	function onFetch(){
+		console.log('点击')
+		fetch('https://api.github.com/users/ruanyf')
+				.then(response => response.json())
+				.then(json => console.log(json))
+				.catch(err => console.log('Request Failed', err));
+	}
+	
+	
 </script>
 
 </html>
